@@ -1,6 +1,10 @@
-2007-01-16  Loic Dachary  <loic@dachary.org>
+2007-01-16  Cedric Pinson  <cpinson@freesheep.org>
 
 	* Release 1.0.22
+
+	* Update gentoo package
+
+2007-01-16  Loic Dachary  <loic@dachary.org>
 
 	* tests/test-gamehistory.py.in:
 	specific tests for historyReduce of blind/blind_request entries
